Add new page and change ajax api

--- a/BR-MS/historyLookup.html
+++ b/BR-MS/historyLookup.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>历史数据查询</title>
+    <link rel="stylesheet" href="lib/eleme-index.css">
+    <style>
+
+    </style>
 </head>
 <body>
-
+<div id="app">
+    <el-form>
+        <el-form-item></el-form-item>
+    </el-form>
+</div>
 </body>
+<script src="lib/vue.js"></script>
+<script src="lib/eleme-index.js"></script>
+<script src="res/dependencies.js"></script>
+<script>
+    var app = new Vue({
+        el: '#app',
+        data: {
+
+        }
+    });
+</script>
 </html>
