--- a/BR-MS/UserQuery.html
+++ b/BR-MS/UserQuery.html
@@ -31,24 +31,22 @@
 </head>
 <body>
 
-<div id="userAuth">
+<div id="app">
     <el-form id="search" :inline="true" ref="queryParams" label-position="right" label-with="80px" :model="queryParams"
              v-loading.fullscreen="initializing" element-loading-text="正在获取数据"
              element-loading-background="rgba(0,0,0,0.7)">
-        <el-form-item label="用户名" v-model="queryParams.username">
-            <el-input></el-input>
+        <el-form-item label="用户ID">
+            <el-input v-model="queryParams.id"></el-input>
         </el-form-item>
-        <el-form-item label="姓名" v-model="queryParams.realName">
-            <el-input></el-input>
+        <el-form-item label="单位">
+            <el-input v-model="queryParams.companyName"></el-input>
         </el-form-item>
-        <el-form-item label="证件号码" v-model="queryParams.IDNumber">
-            <el-input></el-input>
+        <el-form-item label="姓名">
+            <el-input v-model="queryParams.realName"></el-input>
         </el-form-item>
-        <el-form-item label="手机号码" v-model="queryParams.phoneNumber">
-            <el-input></el-input>
-        </el-form-item>
+
         <el-form-item>
-            <el-button type="primary">查找</el-button>
+            <el-button type="primary" @click="search">查找</el-button>
             <el-button>返回</el-button>
         </el-form-item>
     </el-form>
@@ -87,7 +85,7 @@
             </template>
         </el-table-column>
         <el-table-column prop="realName" label="姓名" width="75px"></el-table-column>
-        <el-table-column prop="username" label="用户名" width="125px"></el-table-column>
+        <el-table-column prop="id" label="用户ID" width="125px"></el-table-column>
         <el-table-column prop="role" label="用户类型" width="125px"></el-table-column>
         <el-table-column prop="IDType" label="证件类型" width="125px"></el-table-column>
         <el-table-column prop="IDNumber" label="证件号码" width="200px"></el-table-column>
@@ -105,8 +103,8 @@
                            element-loading-text="正在提交" element-loading-background="rgba(0,0,0,0.7)">
                     <el-form ref="editedForm" label-position="right" label-width="120px" :rules="editRule"
                              :model="editedForm">
-                        <el-form-item label="用户名" prop="username">
-                            <el-input v-model="editedForm.username" :value="props.row.username"
+                        <el-form-item label="用户ID" prop="id" required>
+                            <el-input v-model="editedForm.id" :value="props.row.id"
                                       :disabled="true"></el-input>
                         </el-form-item>
                         <el-form-item label="用户类型" prop="role" required>
@@ -115,7 +113,7 @@
                                 <el-option label="仓库管理员" value="manager"></el-option>
                             </el-select>
                         </el-form-item>
-                        <el-form-item label="用户姓名" prop="realName">
+                        <el-form-item label="用户姓名" prop="realName" required>
                             <el-input v-model="editedForm.realName" :value="props.row.realName" required></el-input>
                         </el-form-item>
                         <el-form-item label="单位名称" prop="companyName" required>
@@ -127,17 +125,17 @@
                         <el-form-item label="职务" prop="title">
                             <el-input v-model="editedForm.title" :value="props.row.title" required></el-input>
                         </el-form-item>
-                        <el-form-item label="手机号码" prop="phoneNumber">
+                        <el-form-item label="手机号码" prop="phoneNumber" required>
                             <el-input v-model="editedForm.phoneNumber" :value="props.row.phoneNumber"
                                       required></el-input>
                         </el-form-item>
                         <el-form-item label="固定电话">
                             <el-input v-model="editedForm.tel" :value="props.row.tel"></el-input>
                         </el-form-item>
-                        <el-form-item label="电子邮箱">
+                        <el-form-item label="电子邮箱" required>
                             <el-input v-model="editedForm.email" :value="props.row.email"></el-input>
                         </el-form-item>
-                        <el-form-item label="联系地址">
+                        <el-form-item label="联系地址" required>
                             <el-input v-model="editedForm.address" :value="props.row.address"></el-input>
                         </el-form-item>
 
@@ -158,65 +156,48 @@
 <script src="lib/vue.js"></script>
 <script src="lib/eleme-index.js"></script>
 <script src="lib/jquery.min.js"></script>
+<script src="res/dependencies.js"></script>
 <script>
-    var APIs = ['',];
-    var userAuth = new Vue({
-        el: '#userAuth',
+    var items = [];
+    var pageNum = 1, pageSize = 6, maxPage = 0;
+    var post = require('/mods/backend');
+    var generalForm={
+        id: '',
+        username:'',
+        role: '',
+        realName: '',
+        IDType: '',
+        IDNumber: '',
+        companyName: '',
+        title: '',
+        phoneNumber: '',
+        tel: '',
+        email: '',
+        address: '',
+        employeeId: ''
+    };
+    function clearData() {
+        for (let i = 0; i < pageSize; i++) {
+            items.pop();
+        }
+    }
+    var app = new Vue({
+        el: '#app',
         data: function () {
-
-            //将所有用户GET到这里
-            const item1 = {
-                username: 'liadrinz',
-                role: 'user',
-                realName: '张三',
-                IDType: '公民身份证',
-                IDNumber: '110101200001010004',
-                companyName: '北京邮电大学',
-                title: '学生',
-                phoneNumber: '18888888888',
-                tel: '010-66666666',
-                email: 'zhangsan@bupt.edu.cn',
-                address: '北京市海淀区西土城路10号北京邮电大学',
-                employeeId: '1234',
-                repoId: null,
-                repoAddr: null,
-                repoCoord: null
-            };
-
-            const item2 = {
-                username: 'emmmm',
-                role: 'manager',
-                realName: '李四',
-                IDType: '公民身份证',
-                IDNumber: '110101500001010008',
-                companyName: '北京邮电大学',
-                title: '学生',
-                phoneNumber: '166666666666',
-                tel: '010-88888888',
-                email: 'lisi@bupt.edu.cn',
-                address: '北京市海淀区西土城路10号北京邮电大学',
-                employeeId: '1235',
-                repoId: '1234',
-                repoAddr: '北京市海淀区西土城路10号北京邮电大学教三楼233',
-                repoCoord: null
-            };
-
-            item1.dialogVisible = false;
-            item2.dialogVisible = false;
-
             return {
                 loading: false,
-                initializing: true,
-                results: [item1, item2],
+                initializing: false,
+                dialogVisible: false,
+                results: items,
                 queryParams: {
-                    usertype: '',
-                    username: '',
+                    id: '',
+                    username:'',
                     realName: '',
-                    IDNumber: '',
-                    company: ''
+                    companyName: ''
                 },
                 editedForm: {
-                    username: '',
+                    id: '',
+                    username:'',
                     role: '',
                     realName: '',
                     IDType: '',
@@ -234,78 +215,50 @@
         },
         mounted: function () {
             //从后端拉取数据
-            $.ajax({
-                type: 'get',
-                url: 'http://10.112.128.63:8080/dispatch/user',
-                success: (data, result, resultDesp) => {
-                    if (data.result === 1000) {
-                        console.log(data);
-                        console.log(result);
-                        console.log(resultDesp);
-                        this.initializing = false;
-                    } else {
-                        this.$alert('数据拉取失败');
-                    }
-                    this.initializing = false;
-                },
-                error: (result, resultDesp) => {
-                    console.log(result);
-                    console.log(resultDesp);
-                    this.$alert('数据拉取失败');
-                    this.initializing = false;
-                }
-            });
         },
         methods: {
             search: () => {
-                $.ajax({
-                    method: 'get',
-                    url: '/user',
-                    data: JSON.stringify({
-                        "username": this.queryParams.username,
-                        "realName": this.queryParams.realName,
-                        "IDNumber": this.queryParams.IDNumber,
-                        "phoneNumber": this.queryParams.phoneNumber,
-                        "employeeId": this.queryParams.employeeId
-                    }),
-                    success: (data) => {
-                        for (var item in data.data) {
-                            this.results.push(item);
-                        }
-                    },
-                    error: () => {
-                        this.$alert('查找失败，请稍后重试');
+                clearData();
+                post('/system/get_user_info', app.queryParams, (data, errid) => {
+                    console.log(data);
+                    if (errid) {
+                        app.$alert('数据拉取失败');
+                        app.initializing = false;
+                        return;
                     }
-                })
+                    if(data){
+                        var user = data;
+                        data.dialogVisible = false;
+                        items.push(user);
+                        app.initializing = false;
+                    }
+
+                });
             },
             confirmEdition: function (formName) {
                 this.$refs[formName].validate((valid) => {
                     if (valid) {
                         this.loading = true;
-                        $.ajax({
-                            type: 'post',
-                            url: 'http://10.112.128.63:8080/dispatch/user/1/change',//TODO: set correct URL
-                            data: {},
-                            success: (data) => {
-                                if (data.result === 1000) {
-                                    this.$alert('修改成功');
-                                    this.dialogVisible = false;
-                                } else {
-                                    this.$alert('修改失败');
-                                }
-                                this.loading = false;
-                            },
-                            error: () => {
-                                this.$alert('修改失败');
-                                this.loading = false;
-                                return true;
+                        post('/system/update_user_info', app.editedForm, (data, errid) => {
+                            if (errid) {
+                                console.log(errid);
+                                app.$message.error('修改失败');
+                                app.loading = false;
+                                return;
                             }
-                        })
+                            this.$message({
+                                type: "success",
+                                message: '修改成功'
+                            });
+                            pageControl.call(this, 'stay');
+                            app.loading = false;
+                            app.dialogVisible = false;
+                        });
                     } else {
                         this.$alert('信息错误，请重新填写');
                         return false;
                     }
-                })
+                });
             }
         }
     });
